SNACK_CONFIG_COMMAND

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,8 +74,10 @@ find_program(TCLSH_EXE
 
 if (WIN32)
   set(TCLCONFIG_DIR win)
+  set(SNACK_CONFIG_COMMAND autoreconf -ifv <SOURCE_DIR>/${TCLCONFIG_DIR} && <SOURCE_DIR>/${TCLCONFIG_DIR}/configure --host=${HOST_TRIPLET} --prefix=${CMAKE_INSTALL_PREFIX} --with-tcl=<INSTALL_DIR>/lib --with-tk=<INSTALL_DIR>/lib)
 else()
   set(TCLCONFIG_DIR unix)
+  set(SNACK_CONFIG_COMMAND <SOURCE_DIR>/${TCLCONFIG_DIR}/configure --host=${HOST_TRIPLET} --prefix=${CMAKE_INSTALL_PREFIX} --with-tcl=<INSTALL_DIR>/lib --with-tk=<INSTALL_DIR>/lib)
 endif()
 
 if (NOT HOST_TRIPLET)
@@ -181,7 +183,7 @@ ExternalProject_Add(snack
   URL_HASH SHA256=${SNACK_HASH}
   INSTALL_DIR ${CMAKE_INSTALL_PREFIX}
   PATCH_COMMAND patch -d <SOURCE_DIR> -p0 < ${CMAKE_CURRENT_SOURCE_DIR}/src/patches/snack.patch
-  CONFIGURE_COMMAND <SOURCE_DIR>/${TCLCONFIG_DIR}/configure --host=${HOST_TRIPLET} --prefix=${CMAKE_INSTALL_PREFIX}
+  CONFIGURE_COMMAND ${SNACK_CONFIG_COMMAND}
   BUILD_COMMAND ${MAKE_EXE}
   INSTALL_COMMAND ${MAKE_EXE} install DESTDIR=<INSTALL_DIR>
   UPDATE_COMMAND ""
