Update SourceForge mirror

--- a/src/defs/defs.mak.in
+++ b/src/defs/defs.mak.in
@@ -31,7 +31,7 @@ LIBRESSL_VERSION=	    3.2.2
 LIBRESSL_LIBVER=	    3.2.2
 
 BZIP2_VERSION=		    1.0.4
-SOURCEFORGE_MIRROR?=  vorboss
+SOURCEFORGE_MIRROR?=        deac-ams
 WINDNS_VERSION=		    0.1.3
 WINDNS_LIBVER=		    $(subst .,,$(WINDNS_VERSION))
 
